# pi-voice-assistant

./: .gitignore  README.md  config.yaml  pyproject.toml  run.sh  setup.py
prompts/: system_prompt.txt
prompts/system_reminders/: date_reminder.txt  user_reminder.txt
src/: main.py
src/config/: loader.py  prompt_loader.py  schema.py  secrets.py  utils.py
src/core/: orchestrator.py  session.py  signal_bus.py  state.py
src/services/: agent.py  audio_capture.py  audio_playback.py  stt.py  tts.py  wake_word.py
src/tools/: base.py  registry.py
src/tools/builtin/: device_control.py  end_conversation.py  web_fetch.py  web_search.py
src/util/: chunk_batcher.py  logging.py  prompt_loader.py
tests/: test_agent.py  test_config.py  test_session.py  test_state.py  test_tool_registry.py
