[project]
name = "pi-voice-assistant"
version = "0.1.0"
description = "Voice assistant for Raspberry Pi 5"
requires-python = ">=3.11,<3.12"

dependencies = [
    "ollama>=0.4.0",
    "pyyaml>=6.0",
    "numpy>=1.26,<2",
    "faster-whisper>=1.1.0",
    "openwakeword; platform_system == 'Linux' and python_version < '3.13'",
    "tflite-runtime>=2.14.0; platform_system == 'Linux'",
    "piper-tts>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sounddevice>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
